manifests/overlays/dev/dependency-track/patch-dependency-track-frontend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dependency-track-frontend
  namespace: default
spec:
  template:
    spec:
      containers:
      - name: dependency-track-frontend
