manifests/overlays/dev/dependency-track/patch-traefik-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: traefik
spec:
  template:
    spec:
      hostNetwork: true
      containers:
      - name: traefik
        args:
          - --entryPoints.web.address=0.0.0.0:80
          - --entryPoints.websecure.address=0.0.0.0:443
          - --entryPoints.web.http.redirections.entryPoint.to=websecure
          - --entryPoints.web.http.redirections.entryPoint.scheme=https
          - --api.dashboard=true
          - --ping=true
          - --metrics.prometheus=true
          - --metrics.prometheus.entrypoint=metrics
          - --providers.kubernetescrd
          - --providers.kubernetesingress
          - --providers.kubernetesingress.allowEmptyServices=true
          - --providers.kubernetesingress.ingressendpoint.publishedservice=traefik/traefik
          - --entryPoints.websecure.http.tls=true
          - --log.level=INFO
