manifests/overlays/dev/dependency-track/patch-dependency-track-frontend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dependency-track-frontend
  namespace: default
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30080
